# pars

./: .clang-format  .clangd  .dir-locals.el  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  flake.nix  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  main.yml  publish-docs.yml
cmake/: FindSphinx.cmake  enable_sanitizer.cmake  parsConfig.cmake.in
dev/coverage/data/: test-events-internal.profraw  test-events-network.profdata  test-events-network.profraw
dev/coverage/test-events-internal/: index.html  lib_include_clev_err.h.html  lib_include_clev_own.h.html  (+57 more)
dev/coverage/tests/: hits  (+60 more)
dev/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
docs/: CMakeLists.txt  Doxyfile.in  requirements.txt
docs/rst/: conf.py
docs/rst/_templates/: layout.html
docs/rst/contribute/: building.rst
docs/rst/examples/: client.rst
doxygen/html/: backend_8h.html  classes.html  classpars_1_1app_1_1resources_a75257805bb039b3b3089058c828f491e_cgraph.map  classpars_1_1app_1_1resources_a75257805bb039b3b3089058c828f491e_cgraph.md5  classpars_1_1app_1_1single-members.html  classpars_1_1app_1_1single__coll__graph.map  classpars_1_1comp_1_1backend-members.html  classpars_1_1comp_1_1backend.html  classpars_1_1comp_1_1client.html  classpars_1_1ev_1_1dispatcher.html  classpars_1_1ev_1_1enqueuer.html  classpars_1_1ev_1_1enqueuer_a0a53959cc5a6438acc10f81ebef96d9a_icgraph.md5  classpars_1_1ev_1_1job-members.html  classpars_1_1ev_1_1job.html  classpars_1_1ev_1_1job_ae742efe1daa7a551317a916871ecaf7e_cgraph.md5  classpars_1_1ev_1_1job_afce2c813eadb6e5471e026fa0b4fbaaf_icgraph.map  classpars_1_1ev_1_1job_aff37b681c04723903c874d551940e676_icgraph.map  classpars_1_1ev_1_1spec.html  classpars_1_1ev_1_1spec_a687a863807ab68c98c9a0303373535dd_cgraph.md5  classpars_1_1net_1_1context__registry-members.html  classpars_1_1net_1_1context__registry.html  classpars_1_1net_1_1context__registry_abb67afe058583427c71128533cd5cb42_cgraph.map  classpars_1_1net_1_1op-members.html  classpars_1_1net_1_1op_a0ddb15b0640c63b94650cf12cd609a42_cgraph.md5  classpars_1_1net_1_1pull.html  classpars_1_1net_1_1push-members.html  classpars_1_1net_1_1push.html  classpars_1_1net_1_1push_a624de566a91546b573341ee254ea6749_cgraph.md5  classpars_1_1net_1_1rep-members.html  classpars_1_1net_1_1req-members.html  classpars_1_1net_1_1socket-members.html  classpars_1_1net_1_1socket.html  classpars_1_1net_1_1socket_a95e63741218a07e7891d0e3d5e72b55b_icgraph.map  classpars_1_1net_1_1tool__view-members.html  classpars_1_1net_1_1tool__view_a19c28d6711327852e90fd486d37efd7a_icgraph.map  classpars__example_1_1apps_1_1client-members.html  classpars__example_1_1apps_1_1client.html  classpars__example_1_1apps_1_1server__backend-members.html  client_8cpp.html  common_8h__incl.map  (+270 more)
doxygen/xml/: Doxyfile.xml  classpars_1_1app_1_1single.xml  classpars_1_1ev_1_1dispatcher.xml  classpars_1_1net_1_1pipe.xml  classpars__example_1_1apps_1_1client.xml  conceptpars_1_1ev_1_1async__kind__c.xml  conceptpars_1_1ev_1_1async__network__event__c.xml  conceptpars_1_1net_1_1tool__c.xml  context_8h.xml  dir_2d7454e8a84ae26d386e33a25bbce53b.xml  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.xml  dir_d78138f64fa1281cc4d5674365f8996f.xml  enqueuer_8h.xml  fib_8h.xml  hf__registry_8h.xml  hf__registry____insert_8h.xml  init_8h.xml  kind__base_8h.xml  namespacenng.xml  namespacestd.xml  nng_8h.xml  op_8h.xml  pars_8h.xml  pull_8h.xml  req_8h.xml  server__backend_8cpp.xml  socket__opt_8h.xml  structfmt_1_1formatter_3_01nng_1_1exception_01_4.xml  structfmt_1_1formatter_3_01nng_1_1pipe__view_01_4.xml  structpars_1_1app_1_1with__default__setup.xml  structpars_1_1ev_1_1fired.xml  structpars_1_1ev_1_1klass_3_01creating__pipe_01_4.xml  structpars_1_1ev_1_1klass_3_1_1pars__example_1_1event_1_1stop__compute_01_4.xml  structpars_1_1ev_1_1pipe__removed.xml  structpars_1_1ev_1_1sent_3_01event__t_01_4.xml  structpars_1_1f_1_1lf.xml  structpars_1_1f_1_1pntl.xml  structpars__example_1_1event_1_1fib__requested.xml  structstd_1_1hash_3_01value__t_01_4.xml
example/: CMakeLists.txt  client.cpp  common.h  event.h  fib.h  server_backend.cpp
lib/: CMakeLists.txt  config.h.in
lib/include/clev/: err.h  iface.h  own.h  value.h
lib/include/nngxx/: aio.h  concept.h  ctx.h  dialer.h  err.h  listener.h  msg.h  msg_body.h  msg_header.h  opt.h  opt_getter.h  opt_setter.h  pipe.h  socket.h  socket_decl.h
lib/include/nngxx/iface/: aio.h  ctx.h  dialer.h  listener.h  msg.h  pipe.h  socket.h  value.h
lib/include/pars/: err.h  init.h  log.h  pars.h
lib/include/pars/app/: resources.h  setup.h  single.h  state_machine.h
lib/include/pars/comp/: backend.h  client.h
lib/include/pars/concept/: event.h  formattable.h  hashable.h  kind.h  net.h
lib/include/pars/ev/: dispatcher.h  enqueuer.h  event.h  hf_registry.h  hf_registry__insert.h  job.h  kind.h  kind_base.h  kind_decl.h  klass.h  make_hf.h  metadata.h  runner.h  serializer.h  spec.h
lib/include/pars/fmt/: formattable.h  helpers.h  nng.h  stl.h
lib/include/pars/log/: demangle.h  flags.h  nametype.h
lib/include/pars/net/: context.h  context_opt.h  context_registry.h  dir.h  hash.h  op.h  pipe.h  pull.h  push.h  rep.h  req.h  socket.h  socket_opt.h  tool_view.h
ports/nng/: portfile.cmake
scripts/: build-coverage.sh  ci-build.sh  spawn-clients.sh
sphinx/: .buildinfo  genindex.html  search.html
sphinx/.doctrees/: environment.pickle  index.doctree
sphinx/contribute/: building.html
sphinx/examples/: client.html  ref.html
test/: CMakeLists.txt  ev-event--internal.cpp  ev-event--network.cpp  events-internal.cpp  events-network.cpp  nngxx-msg.cpp  nngxx-msg.h  pars.cpp
v0.1.0/sphinx/: index.html  objects.inv  searchindex.js
v0.1.1/sphinx/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v0.1.2/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.3/sphinx/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v0.2.0/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html
(+6636 files in other folders)
